--- a/doc/gmall-admin.yml
+++ b/doc/gmall-admin.yml
@@ -13,7 +13,7 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: 192.168.1.131:8848
+        server-addr: 192.168.85.1:8848
   # 环境 dev|test|prod
   profiles:
     active: dev
@@ -46,7 +46,7 @@ spring:
     url: jdbc:mysql://localhost:3306/guli_admin?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8&useSSL=false
     driver-class-name: com.mysql.jdbc.Driver
     username: root
-    password: 123456
+    password: root
     druid:
       initial-size: 10
       max-active: 100
