--- a/doc/wms-server.yml
+++ b/doc/wms-server.yml
@@ -4,12 +4,12 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: 192.168.1.131:8848
+        server-addr: 192.168.85.1:8848
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
     url: jdbc:mysql://localhost:3306/guli_wms?allowMultiQueries=true&useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=Asia/Shanghai
     username: root
-    password: 123456
+    password: root
   redis:
     host: localhost
   rabbitmq:
