--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
 		<spring-cloud.version>Greenwich.SR2</spring-cloud.version>
 		<nacos.version>0.2.2.RELEASE</nacos.version>
 		<mybatisplus.version>3.2.0</mybatisplus.version>
+<!--		<mybatisplus.version>3.1.2</mybatisplus.version>-->
 		<mysql.version>5.1.46</mysql.version>
 		<swagger.version>2.7.0</swagger.version>
 		<aliyun-sdk-oss.version>3.1.0</aliyun-sdk-oss.version>
